--- a/timeset/src/main/resources/application-pro.yml
+++ b/timeset/src/main/resources/application-pro.yml
@@ -1,7 +1,7 @@
 server:
   servlet:
-    context-path: /treasure
-  port: 8080
+    context-path: /timeset
+  port: 80
 
 spring:
   mvc:
@@ -15,17 +15,17 @@ spring:
   datasource:
     username: root
     password: 123456
-    url: jdbc:mysql://127.0.0.1:3306/treasure_db?serverTimezone=UTC
+    url: jdbc:mysql://127.0.0.1:3306/timeset_db
     driver-class-name: com.mysql.cj.jdbc.Driver
 
 
 
 mybatis:
   mapper-locations: classpath*:mapping/*Mapper.xml
-  type-aliases-package: com.treasure.demo
+  type-aliases-package: com.timeset
   configuration:
     log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
-    ##showSql
+#showSql
 
 pagehelper:
   helperDialect: mysql
