--- a/TimeSet_andorid/app/build.gradle
+++ b/TimeSet_andorid/app/build.gradle
@@ -35,4 +35,23 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+
+    //图片选择器
+    implementation 'indi.liyi.view:image-viewer:3.0.1'
+
+    //gilde
+    implementation 'com.android.support:recyclerview-v7:28.0.0'
+    implementation 'com.facebook.fresco:fresco:0.13.0'
+    implementation 'top.zibin:Luban:1.1.1'
+    implementation 'com.github.bumptech.glide:glide:3.7.0'
+    implementation 'com.kuyue:utils:1.0.8'
+    implementation 'com.yuyh.imgsel:library:2.0.6'
+    implementation 'indi.liyi.view:image-viewer:3.0.1'
+    implementation "com.github.bumptech.glide:okhttp3-integration:4.8.0"
+
+    // OkHttp
+    implementation 'com.squareup.okhttp3:okhttp:3.10.0'
+    //PictureSelector
+//    implementation 'com.github.LuckSiege.PictureSelector:picture_library:v2.2.3'
+//    implementation 'com.github.LuckSiege.PictureSelector:picture_library:v2.5.2'
 }
