--- a/TimeSet_andorid/build.gradle
+++ b/TimeSet_andorid/build.gradle
@@ -5,6 +5,10 @@ buildscript {
     repositories {
         google()
         jcenter()
+        mavenCentral()
+        maven{
+            url 'https://maven.google.com'
+        }
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.1.4'
@@ -19,6 +23,8 @@ allprojects {
     repositories {
         google()
         jcenter()
+        maven { url 'https://jitpack.io' }
+        maven { url "https://dl.bintray.com/albertlii/android-maven/" }
     }
 }
 
