--- a/TimeSet_andorid/app/build.gradle
+++ b/TimeSet_andorid/app/build.gradle
@@ -42,6 +42,8 @@ dependencies {
     implementation 'androidx.navigation:navigation-ui:2.2.2'
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
     testImplementation 'junit:junit:4.12'
+    //Gson
+    implementation 'com.google.code.gson:gson:2.8.5'
 
 
     //图片选择器
