--- a/TimeSet_andorid/app/src/main/AndroidManifest.xml
+++ b/TimeSet_andorid/app/src/main/AndroidManifest.xml
@@ -25,7 +25,7 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-
+        android:theme="@style/AppTheme.NoActionBar"
         tools:replace="android:appComponentFactory"
         android:appComponentFactory="任意字符">
         <activity android:name=".MainActivity">
