--- a/TimeSet_andorid/app/build.gradle
+++ b/TimeSet_andorid/app/build.gradle
@@ -10,7 +10,6 @@ MobSDK {
     SMSSDK {}
 }
 android {
-
     compileSdkVersion 28
     defaultConfig {
         applicationId "com.example.lt.timeset_andorid"
@@ -34,7 +33,7 @@ android {
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation 'androidx.appcompat:appcompat:1.0.2'
     implementation 'com.google.android.material:material:1.1.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
@@ -44,8 +43,6 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     //Gson
     implementation 'com.google.code.gson:gson:2.8.5'
-
-
     //gilde
     implementation 'com.facebook.fresco:fresco:0.13.0'
     implementation 'top.zibin:Luban:1.1.1'
@@ -53,14 +50,12 @@ dependencies {
     implementation 'com.kuyue:utils:1.0.8'
     implementation 'com.yuyh.imgsel:library:2.0.6'
     implementation 'indi.liyi.view:image-viewer:3.0.1'
-    implementation "com.github.bumptech.glide:okhttp3-integration:4.8.0"
-
+    implementation 'com.github.bumptech.glide:okhttp3-integration:4.8.0'
     // OkHttp
     implementation 'com.squareup.okhttp3:okhttp:3.10.0'
     //PictureSelector
-//    implementation 'com.github.LuckSiege.PictureSelector:picture_library:v2.2.3'
-//    implementation 'com.github.LuckSiege.PictureSelector:picture_library:v2.5.2'
+    //    implementation 'com.github.LuckSiege.PictureSelector:picture_library:v2.2.3'
+    //    implementation 'com.github.LuckSiege.PictureSelector:picture_library:v2.5.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
-
 }
