--- a/TimeSet_andorid/app/src/main/AndroidManifest.xml
+++ b/TimeSet_andorid/app/src/main/AndroidManifest.xml
@@ -45,6 +45,7 @@
         <activity android:name=".Login.RegistryActivity" />
         <activity android:name=".Album.AddAlbumActivity" />
         <activity android:name=".BigTwo.InAlbumActivity"/>
+        <activity android:name=".Search.SearchActivity"/>
     </application>
 
 </manifest>
