--- a/TimeSet_andorid/app/src/main/AndroidManifest.xml
+++ b/TimeSet_andorid/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     package="com.example.lt.timeset_andorid">
+   <!-- <uses-permission android:name="android.permission.BLUETOOTH"/>
+    <uses-permission android:name="android.permission.BLUETOOTH_ADMIN"/>-->
 
     <uses-permission android:name="android.permission.READ_CONTACTS" />
     <uses-permission android:name="android.permission.READ_PHONE_STATE" />
@@ -16,10 +18,6 @@
     <uses-permission android:name="android.permission.CAMERA" />
 
     <application
-        android:focusable="true"
-        android:focusableInTouchMode="true"
-        android:usesCleartextTraffic="true"
-
         android:allowBackup="true"
         android:appComponentFactory="任意字符"
         android:icon="@mipmap/ic_launcher"
@@ -34,8 +32,11 @@
         <activity android:name=".Person.SettingActivity" />
         <activity android:name=".Person.PersonalActivity" />
         <activity android:name=".Login.LoginActivity">
+           <!-- android:screenOrientation="portrait"
+            android:windowSoftInputMode="adjustPan"-->
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
