--- a/TimeSet_andorid/app/build.gradle
+++ b/TimeSet_andorid/app/build.gradle
@@ -12,15 +12,15 @@ MobSDK {
 android {
     signingConfigs {
         config {
-            keyAlias 'key'
+            keyAlias 'key_android'
             keyPassword '123456'
-            storeFile file('D:/android/project/keystore.jks')
+            storeFile file('D:\\Android\\project\\keystore.jks')
             storePassword '123456'
         }
         debug {
             keyAlias 'androiddebugkey'
             keyPassword 'android'
-            storeFile file('E:/debug.keystore')
+            storeFile file('E:\\debug.keystore')
             storePassword 'android'
         }
     }
@@ -59,6 +59,7 @@ dependencies {
     implementation 'com.google.code.gson:gson:2.8.5'
     //gilde
     implementation 'com.facebook.fresco:fresco:0.13.0'
+
     implementation 'top.zibin:Luban:1.1.1'
     implementation 'com.github.bumptech.glide:glide:3.7.0'
     implementation 'com.kuyue:utils:1.0.8'
