--- a/timeset/src/main/resources/application-dev.yml
+++ b/timeset/src/main/resources/application-dev.yml
@@ -17,6 +17,8 @@ spring:
     password: 123456
     url: jdbc:mysql://47.92.229.147:3306/timeset?serverTimezone=UTC&useUnicode=true&characterEncoding=utf-8
     driver-class-name: com.mysql.cj.jdbc.Driver
+    hikari:
+      max-lifetime: 30000
 
 
 
