--- a/timeset/pom.xml
+++ b/timeset/pom.xml
@@ -98,7 +98,7 @@
             <resource>
                 <directory>src/resources</directory>
                 <excludes>
-                    <exclude>*</exclude>
+                    <exclude>/static/**</exclude>
                 </excludes>
                 <filtering>false</filtering>
             </resource>
