--- a/TimeSet_andorid/app/src/main/AndroidManifest.xml
+++ b/TimeSet_andorid/app/src/main/AndroidManifest.xml
@@ -2,9 +2,10 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     package="com.example.lt.timeset_andorid">
-   <!-- <uses-permission android:name="android.permission.BLUETOOTH"/>
-    <uses-permission android:name="android.permission.BLUETOOTH_ADMIN"/>-->
-
+    <!--
+     <uses-permission android:name="android.permission.BLUETOOTH"/>
+    <uses-permission android:name="android.permission.BLUETOOTH_ADMIN"/>
+    -->
     <uses-permission android:name="android.permission.READ_CONTACTS" />
     <uses-permission android:name="android.permission.READ_PHONE_STATE" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
@@ -17,50 +18,55 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.CAMERA" />
     <uses-permission android:name="com.android.launcher.permission.READ_SETTINGS" />
-    <uses-permission android:name="android.permission.WAKE_LOCK"/>
+    <uses-permission android:name="android.permission.WAKE_LOCK" />
     <uses-permission android:name="android.permission.CHANGE_WIFI_STATE" />
 
     <application
-        android:networkSecurityConfig="@xml/network_security_config"
         android:allowBackup="true"
         android:appComponentFactory="任意字符"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
+        android:networkSecurityConfig="@xml/network_security_config"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:replace="android:appComponentFactory">
-        <!--百度地图-->
+        <activity android:name=".BigTwo.FootEarth.ShowFootPhotoActivity">
+
+        </activity>
+        <!-- 百度地图 -->
         <meta-data
             android:name="com.baidu.lbsapi.API_KEY"
-            android:value="jN6xIoPtbQK52In8Odt288FimIM4PgiX"/>
+            android:value="jN6xIoPtbQK52In8Odt288FimIM4PgiX" />
 
-        <activity android:name=".Person.ModifyPasswordByPhoneActivity"></activity>
+        <activity android:name=".Person.ModifyPasswordByPhoneActivity" />
         <activity android:name=".Person.ModifyPhoneNumberActivity" />
         <activity android:name=".Person.ModifyPasswordActivity" />
         <activity android:name=".Person.SettingActivity" />
         <activity android:name=".Person.PersonalActivity" />
-
         <activity android:name=".BigTwo.AddPictureActivity">
-           <!-- android:screenOrientation="portrait"
-            android:windowSoftInputMode="adjustPan"-->
+
+            <!--
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="adjustPan"
+            -->
 
         </activity>
-
         <activity android:name=".MainActivity" />
         <activity android:name=".Login.PhoneTestActivity" />
         <activity android:name=".Login.RegistryActivity" />
         <activity android:name=".Album.AddAlbumActivity" />
-        <activity android:name=".BigTwo.InAlbumActivity"/>
-        <activity android:name=".Search.SearchActivity"/>
+        <activity android:name=".BigTwo.InAlbumActivity" >
+        </activity>
+        <activity android:name=".Search.SearchActivity" />
         <activity android:name=".Login.LoginActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
         <provider
             android:name=".util.PictureFileProvider"
             android:authorities="${applicationId}.provider"
