--- a/TimeSet_andorid/app/build.gradle
+++ b/TimeSet_andorid/app/build.gradle
@@ -76,11 +76,12 @@ dependencies {
     //gilde
     implementation 'com.facebook.fresco:fresco:0.13.0'
     implementation 'top.zibin:Luban:1.1.1'
-    implementation 'com.github.bumptech.glide:glide:3.7.0'
     implementation 'com.kuyue:utils:1.0.8'
     implementation 'com.yuyh.imgsel:library:2.0.6'
     implementation 'indi.liyi.view:image-viewer:3.0.1'
-    implementation 'com.github.bumptech.glide:okhttp3-integration:4.8.0'
+    implementation 'com.github.bumptech.glide:glide:4.9.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.9.0'
+    implementation "com.github.bumptech.glide:okhttp3-integration:4.8.0"
     // OkHttp
     implementation 'com.squareup.okhttp3:okhttp:3.10.0'
     androidTestImplementation 'androidx.test.ext:junit:1.1.0'
