--- a/TimeSet_andorid/app/build.gradle
+++ b/TimeSet_andorid/app/build.gradle
@@ -11,18 +11,18 @@ MobSDK {
 }
 android {
     signingConfigs {
-//        debug {
-//            keyAlias 'androiddebugkey'
-//            keyPassword 'android'
-//            storeFile file('E:/debug.keystore')
-//            storePassword 'android'
-//        }
-//        config {
-//            keyAlias 'key_android'
-//            keyPassword '123456'
-//            storeFile file('E:/shixun/keystore.jks')
-//            storePassword '123456'
-//        }
+        debug {
+            keyAlias 'androiddebugkey'
+            keyPassword 'android'
+            storeFile file('E:/debug.keystore')
+            storePassword 'android'
+        }
+        config {
+            keyAlias 'key_android'
+            keyPassword '123456'
+            storeFile file('E:/shixun/keystore.jks')
+            storePassword '123456'
+        }
     }
     sourceSets {
         main {
