--- a/timeset/src/main/resources/application-dev.yml
+++ b/timeset/src/main/resources/application-dev.yml
@@ -28,7 +28,7 @@ mybatis:
   configuration:
     log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
 #    开启驼峰命名
-    map-underscore-to-camel-case: true
+#    map-underscore-to-camel-case: true
     ##showSql
 
 #pagehelper:
