--- a/timeset/pom.xml
+++ b/timeset/pom.xml
@@ -96,14 +96,14 @@
         </plugins>
         <resources>
             <resource>
-                <directory>src/resources</directory>
+                <directory>src/main/resources</directory>
                 <excludes>
                     <exclude>/static/**</exclude>
                 </excludes>
                 <filtering>false</filtering>
             </resource>
         </resources>
-    </build>
 
+    </build>
 
 </project>
