--- a/timeset/src/main/resources/application-pro.yml
+++ b/timeset/src/main/resources/application-pro.yml
@@ -15,8 +15,10 @@ spring:
   datasource:
     username: root
     password: 123456
-    url: jdbc:mysql://127.0.0.1:3306/timeset_db
+    url: jdbc:mysql://47.92.229.147:3306/timeset?serverTimezone=UTC&useUnicode=true&characterEncoding=utf-8&useSSL=false
     driver-class-name: com.mysql.cj.jdbc.Driver
+    hikari:
+      max-lifetime: 30000
 
 
 
@@ -27,10 +29,10 @@ mybatis:
     log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
 #showSql
 
-pagehelper:
-  helperDialect: mysql
-  reasonable: true
-  supportMethodsArguments: true
-  params: count=countSql
+#pagehelper:
+#  helperDialect: mysql
+#  reasonable: true
+#  supportMethodsArguments: true
+#  params: count=countSql
 
 
